--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs 12">
-        <form action="">
+        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
@@ -9,7 +9,9 @@
                         name="name" 
                         id="nane" 
                         class="form-control"
-                        #nameInput>
+                        name="name"
+                        ngModel
+                        required>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
@@ -18,14 +20,25 @@
                         name="amount" 
                         id="amount" 
                         class="form-control"
-                        #amountInput>
+                        name="amount"
+                        ngModel
+                        required
+                        pattern="^[1-9]+[0-9]*$">
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
-                    <button class="btn btn-danger" type="submit" style="margin-left: 10px">Delete</button>
-                    <button class="btn btn-primary" type="submit" style="margin-left: 10px">Clear</button>
+                    <button class="btn btn-success" type="submit" [disabled]="!f.valid">
+                        {{ editMode ? 'Update' : 'Add' }}
+                    </button>
+                    <button 
+                        class="btn btn-danger" 
+                        type="button" 
+                        style="margin-left: 10px"
+                        (click)="onDelete()"
+                        *ngIf="editMode">Delete</button>
+                    <button class="btn btn-primary" type="button" style="margin-left: 10px" 
+                        (click)="onClear()">Clear</button>
                 </div>
             </div>
         </form>
